--- a/ShawnLee/style.css
+++ b/ShawnLee/style.css
@@ -11,6 +11,8 @@
   #AC3B61
 */
 
+
+
 /* Boilerplate formatting */
 * {
   margin:0px;
@@ -20,26 +22,121 @@
 
 /* Main section */
 .mainSection{
-  position:relative;
+  position: relative;
   width: 100%;
-  height: 70vh;
+  height: 60vh;
   background: #EEE2DC;
 }
 
+/* Navbar */
 
+.navbar{
+  font-family: "Roboto Mono", monospace;
+  font-size: 1.5em;
+}
+
+.navbar .nav-link, .nav-item{
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+@media all and (min-width: 992px) {
+	.navbar .nav-item .dropdown-menu{ display: none; }
+	.navbar .nav-item:hover .nav-link{   }
+	.navbar .nav-item:hover .dropdown-menu{ display: block; }
+	.navbar .nav-item .dropdown-menu{ margin-top:0; }
+}
+        
+
+/* Divider */
+.divider{
+  height: 200px;
+}
+
+
+/* SVG Divider */
+
+.shapedividers_com-1939{
+overflow:hidden;
+position:relative;
+}
+.shapedividers_com-1939::before{
+content:'';
+font-family:'shape divider from ShapeDividers.com';
+position: absolute;
+bottom: -1px;
+left: -1px;
+right: -1px;
+top: -1px;
+z-index: 3;
+pointer-events: none;
+background-repeat: no-repeat; 
+transform:scaleX(2.1);
+transform-origin: 100% 0;
+animation: 12s infinite alternate shape-anim-1939-mobile linear;
+background-size: 100% 100px;
+background-position: 50% 0%;    
+background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.28 2.17" preserveAspectRatio="none"><path d="M0 .5c3.07.55 9.27-.42 16.14 0 6.88.4 13.75.57 19.14-.11V0H0z" fill="%23eee2dc"/><path d="M0 1c3.17.8 7.29-.38 10.04-.55 2.75-.17 9.25 1.47 12.67 1.3 3.43-.17 4.65-.84 7.05-.87 2.4-.02 5.52.88 5.52.88V0H0z" opacity=".5" fill="%23eee2dc"/><path d="M0 1.85c2.56-.83 7.68-.3 11.79-.42 4.1-.12 6.86-.61 9.58-.28 2.73.33 5.61 1.17 8.61 1 3-.19 4.73-.82 5.3-.84V.1H0z" opacity=".5" fill="%23eee2dc"/></svg>'); 
+}
+
+@keyframes shape-anim-1939-mobile {
+  100% {
+    transform: scaleX(2.1) translateX(calc(100% - (100% / 2.1)));
+  }
+} 
+@media (min-width:768px){
+.shapedividers_com-1939::before{
+transform:scaleX(1.8);
+transform-origin: 100% 0;
+animation: 13s infinite alternate shape-anim-1939-tablet linear;
+background-size: 100% 136px;
+background-position: 50% 0%;   
+}  
+}
+
+@keyframes shape-anim-1939-tablet {
+  100% {
+    transform: scaleX(1.8) translateX(calc(100% - (100% / 1.8)));
+  }
+}  
+@media (min-width:1025px){
+.shapedividers_com-1939::before{ 
+bottom: -0.1vw;
+left: -0.1vw;
+right: -0.1vw;
+top: -0.1vw; 
+transform:scaleX(1.2);
+transform-origin: 100% 0;
+animation: 12s infinite alternate shape-anim-1939  linear;
+background-size: 100% 199px;
+background-position: 50% 0%;  
+}
+}
+@media (min-width:2100px){
+.shapedividers_com-1939::before{
+background-size: 100% calc(2vw + 199px);
+}
+}
+
+@keyframes shape-anim-1939 {
+  100% {
+    transform: scaleX(1.2) translateX(calc(100% - (100% / 1.2)));
+  }
+}
+
+   
 /* Text Typing Animation */
 
 .typedTextContainer{
   position:absolute;
   left:10%;
-  bottom:30%;
+  bottom:10%;
 }
 
 .typedTextContainer p{
   font-family: "Roboto Mono", monospace;
   font-weight: 600;
-  font-size: 3em;
-  text-align: center;
+  text-align: left;
   overflow: hidden;
 }
 
@@ -71,12 +168,10 @@
 .introHeader{
   font-family: "Roboto Mono", monospace;
   font-weight: 600;
-  font-size: 10vw;
 }
 
 .intro{
   position: fixed;
-  opacity: 0%;
   z-index: 100;
   left:0;
   top:0;
@@ -98,8 +193,8 @@
   position:relative;
   color: #AC3B61;
   display:inline-block;
+  opacity: 0%;
   bottom:-20px;
-  opacity:0%;
 }
 
 .introText.active{
