--- a/ShawnLee/style.css
+++ b/ShawnLee/style.css
@@ -2,14 +2,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-/* 
-  #EDC7B7
-  #f0d6cc (lighter)
-  #EEE2DC
-  #BAB2B5
-  #123C69
-  #AC3B61
-*/
+
+
+:root{
+  --color1: #dee8f1;
+  --color2: #acdde7;
+  --color3: #fed766;
+  --color4: #bb8588;
+  --color5: #3e4e50;
+  --color6: #d62389;
+}
 
 
 
@@ -25,8 +27,32 @@
   position: relative;
   width: 100%;
   height: 60vh;
-  background: #EEE2DC;
+  background: var(--color1);
 }
+
+/* Title */
+
+.title{
+  position: absolute;
+  top: 40%;
+  right:10%;
+  font-family: "Roboto Mono", monospace;
+  white-space: nowrap;
+  width: fit-content;
+}
+
+.title h1{
+  font-weight: 700;
+}
+
+@media (max-width: 992px){
+  .title{
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
 
 /* Navbar */
 
@@ -45,6 +71,12 @@
 	.navbar .nav-item:hover .nav-link{   }
 	.navbar .nav-item:hover .dropdown-menu{ display: block; }
 	.navbar .nav-item .dropdown-menu{ margin-top:0; }
+}
+
+@media (max-width: 992px) {
+  nav.navbar {
+    background: lightgray;
+  }
 }
         
 
@@ -76,7 +108,7 @@ transform-origin: 100% 0;
 animation: 12s infinite alternate shape-anim-1939-mobile linear;
 background-size: 100% 100px;
 background-position: 50% 0%;    
-background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.28 2.17" preserveAspectRatio="none"><path d="M0 .5c3.07.55 9.27-.42 16.14 0 6.88.4 13.75.57 19.14-.11V0H0z" fill="%23eee2dc"/><path d="M0 1c3.17.8 7.29-.38 10.04-.55 2.75-.17 9.25 1.47 12.67 1.3 3.43-.17 4.65-.84 7.05-.87 2.4-.02 5.52.88 5.52.88V0H0z" opacity=".5" fill="%23eee2dc"/><path d="M0 1.85c2.56-.83 7.68-.3 11.79-.42 4.1-.12 6.86-.61 9.58-.28 2.73.33 5.61 1.17 8.61 1 3-.19 4.73-.82 5.3-.84V.1H0z" opacity=".5" fill="%23eee2dc"/></svg>'); 
+background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.28 2.17" preserveAspectRatio="none"><path d="M0 .5c3.07.55 9.27-.42 16.14 0 6.88.4 13.75.57 19.14-.11V0H0z" fill="%23dee8f1"/><path d="M0 1c3.17.8 7.29-.38 10.04-.55 2.75-.17 9.25 1.47 12.67 1.3 3.43-.17 4.65-.84 7.05-.87 2.4-.02 5.52.88 5.52.88V0H0z" opacity=".5" fill="%23dee8f1"/><path d="M0 1.85c2.56-.83 7.68-.3 11.79-.42 4.1-.12 6.86-.61 9.58-.28 2.73.33 5.61 1.17 8.61 1 3-.19 4.73-.82 5.3-.84V.1H0z" opacity=".5" fill="%23dee8f1"/></svg>'); 
 }
 
 @keyframes shape-anim-1939-mobile {
@@ -138,10 +170,11 @@ background-size: 100% calc(2vw + 199px);
   font-weight: 600;
   text-align: left;
   overflow: hidden;
+  color: var(--color5);
 }
 
 .typedText{
-  color: #AC3B61;
+  color: var(--color6);
 }
 
 .cursor{
